# Genesis

./: .editorconfig  .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  README.md  TASKS.md  package.json  pnpm-workspace.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/api/: router.py
backend/app/core/api/dependencies/: system.py
backend/app/core/api/routers/: service.py  system.py
backend/app/core/api/schemas/: system.py
backend/app/core/api/tests/: test_system.py
backend/app/core/core_services/: event_bus.py  service_registry.py
backend/app/core/core_services/config/: __init__.py  constants.py  settings.py
backend/app/core/core_services/di/: __init__.py  container.py  exceptions.py
backend/app/core/core_services/logging/: __init__.py  config.py  logger.py
backend/app/core/core_services/tests/: test_event_bus.py  test_service_registry.py
backend/app/core/memory/application/: memory_manager.py
backend/app/core/memory/domain/: exceptions.py  memory.py  memory_entry.py
backend/app/core/memory/infrastructure/: in_memory_memory.py
backend/app/database/: __init__.py  base.py  config.py  engine.py  session.py
docs/: 00-GENESIS_CONTEXT.md  01-Vision.md  02-System-Architecture.md  03-Tech-Stack.md  04-Folder-Structure.md  05-Agent-OS.md  06-Agent-Runtime.md  07-Memory-System.md  08-Plugin-System.md  09-Database-Design.md  10-API-Standards.md  11-Coding-Standards.md  12-Development-Workflow.md  13-Roadmap.md  14-Agent-Specifications.md  15-Glossary.md
docs/ai/: AI_CONTEXT.md
(+20 files in other folders)
